--- a/index.html
+++ b/index.html
@@ -143,13 +143,14 @@
             <li>Problemas cognitivos e baixa função hepática.</li>
           </ul>
           <h4><strong>Não espere mais para cuidar do seu fígado e restaurar sua saúde.</strong></h4>
-            <button class="btn-padrao">Eu quero o Figo</button>
+          <button class="btn-padrao">Eu quero o Figo</button>
         </div>
 
       </div>
     </div>
   </section>
 
+  <div class="borda"></div>
   <section class="container-fluid">
     <div class="container">
       <div class="row align-items-center">
@@ -159,7 +160,8 @@
             O <strong>Figo</strong> não é apenas mais um suplemento – é uma revolução para sua saúde hepática!
           </p>
           <p class="mb-3 descricao-figo">
-            Desenvolvido com uma fórmula exclusiva, combina os mais avançados nutrientes e extratos naturais de plantas de altíssima qualidade.
+            Desenvolvido com uma fórmula exclusiva, combina os mais avançados nutrientes e extratos naturais de plantas
+            de altíssima qualidade.
           </p>
           <ul class="list-unstyled">
             <li>✔ Estudos científicos comprovam sua eficácia na regeneração da função hepática.</li>
@@ -168,8 +170,10 @@
             <li>✔ Reduz visivelmente o acúmulo de gordura abdominal.</li>
           </ul>
           <p class="mt-3 descricao-figo">
-            Com <strong>Figo</strong>, você dá ao seu corpo o suporte que ele merece para viver mais leve, saudável e equilibrado.
+            Com <strong>Figo</strong>, você dá ao seu corpo o suporte que ele merece para viver mais leve, saudável e
+            equilibrado.
           </p>
+          <button class="btn-padrao">Eu quero experimentar</button>
         </div>
         <div class="col-md-6 text-center">
           <img src="src/img/figo-produto2.webp" class="produto" alt="Produto Figo">
@@ -177,7 +181,175 @@
       </div>
     </div>
   </section>
-  
+
+  <section class="container-fluid padding-block-30">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="titulo-figo">Fórmula Avançada, Comprovada por Pesquisas!</h2>
+          <p class="descricao-figo mb-30">Transforme sua saúde com ingredientes poderosos selecionados para restaurar a
+            função hepática, recuperar a energia da juventude e eliminar anos de gordura acumulada!</p>
+        </div>
+        <div class="col-md-4">
+          <div class="card-container">
+            <div class="card-imagem">
+              <img src="src/img/card-omega.webp" width="100%">
+            </div>
+            <div class="card-titulo">
+              <h4>Omega 3</h4>
+            </div>
+            <div class="card-descricao">
+              <p>Reconhecido por suas propriedades antioxidantes e anti-inflamatórias, o Ômega 3 é essencial para ajudar
+                a combater a esteatose hepática, protegendo o fígado contra danos celulares e promovendo uma saúde
+                duradoura</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-container">
+            <div class="card-imagem">
+              <img src="src/img/card-fibra-maca.webp" width="100%">
+            </div>
+            <div class="card-titulo">
+              <h4>FIBRA DA CASCA DE MAÇÃ</h4>
+            </div>
+            <div class="card-descricao">
+              <p>Muito além de uma simples fibra! Ela auxilia na redução do colesterol ruim e triglicerídeos, além de
+                aumentar a saciedade, controlando o apetite e facilitando a perda de peso saudável</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-container">
+            <div class="card-imagem">
+              <img src="src/img/card-alho.webp" width="100%">
+            </div>
+            <div class="card-titulo">
+              <h4>EXTRATO DE ALHO</h4>
+            </div>
+            <div class="card-descricao">
+              <p>O poderoso Extrato de Alho contém alicina, um antioxidante natural que reduz os níveis de colesterol e
+                triglicerídeos, ajudando a evitar o acúmulo de gordura no fígado</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-container">
+            <div class="card-imagem">
+              <img src="src/img/card-rev.webp" width="100%">
+            </div>
+            <div class="card-titulo">
+              <h4>RESVERATROL</h4>
+            </div>
+            <div class="card-descricao">
+              <p>Com ação antioxidante, anti-inflamatória e lipolítica, o Resveratrol é um aliado valioso para combater
+                problemas hepáticos e obesidade, contribuindo para uma saúde renovada.
+
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-container">
+            <div class="card-imagem">
+              <img src="src/img/card-vitamina-k2.webp" width="100%">
+            </div>
+            <div class="card-titulo">
+              <h4>VITAMINA K2</h4>
+            </div>
+            <div class="card-descricao">
+              <p>Indispensável para a produção de proteínas essenciais pelo fígado, a Vitamina K2 ajuda a equilibrar os
+                níveis de cálcio no organismo e otimiza a coagulação sanguínea</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-container">
+            <div class="card-imagem">
+              <img src="src/img/card-vitamina-b12.webp" width="100%">
+            </div>
+            <div class="card-titulo">
+              <h4>VITAMINA B12 E VITAMINA D</h4>
+            </div>
+            <div class="card-descricao text-wrap">
+              <p>A Vitamina B12 desacelera o progresso da doença hepática gordurosa, enquanto a Vitamina D age como um
+                supernutriente, apoiando o cérebro, a pele e os nervos, além de fortalecer o sistema imunológico</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 text-center">
+          <button class="btn-padrao">Eu quero meu Fígado saúdavel</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container-fluid w-100 bg-green py-5">
+    <div class="container">
+      <div class="row text-center mb-4">
+        <div class="col-md-12">
+          <h2 class="section-title">Histórias Reais, Resultados Incríveis!</h2>
+          <p class="section-subtitle">Assista aos depoimentos de pessoas que transformaram suas vidas com o Figo.</p>
+        </div>
+      </div>
+      <div class="row">
+
+        <div class="col-md-3 mb-4">
+          <div class="card video-card h-100">
+            <div class="video-thumbnail" onclick="loadVideo(this)">
+              <img src="src/img/thumb.jpg" alt="Thumbnail do vídeo">
+              <button class="play-button">▶</button>
+            </div>
+            <div class="video-wrapper" style="display: none;">
+              <iframe data-src="src/videos/01.MP4" frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen
+                controls loading="lazy"></iframe>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 mb-4">
+          <div class="card video-card h-100">
+            <div class="video-thumbnail" onclick="loadVideo(this)">
+              <img src="src/img/thumb.jpg" alt="Thumbnail do vídeo">
+              <button class="play-button">▶</button>
+            </div>
+            <div class="video-wrapper" style="display: none;">
+              <iframe data-src="src/videos/02.MP4" frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen
+                controls loading="lazy"></iframe>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 mb-4">
+          <div class="card video-card h-100">
+            <div class="video-thumbnail" onclick="loadVideo(this)">
+              <img src="src/img/thumb.jpg" alt="Thumbnail do vídeo">
+              <button class="play-button">▶</button>
+            </div>
+            <div class="video-wrapper" style="display: none;">
+              <iframe data-src="src/videos/03.MP4.MP4" frameborder="0" allow="autoplay; encrypted-media;"
+                allowfullscreen controls loading="lazy"></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card video-card h-100">
+            <div class="video-thumbnail" onclick="loadVideo(this)">
+              <img src="src/img/thumb.jpg" alt="Thumbnail do vídeo">
+              <button class="play-button">▶</button>
+            </div>
+            <div class="video-wrapper" style="display: none;">
+              <iframe data-src="src/videos/05.MP4" frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen
+                controls loading="lazy"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
+
 
 
 
