adicionado seção de argumento

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
     </div>
   </section>
 
+  <div class="borda"></div>
   <section class="container-fluid w-100 bg-green py-5">
     <div class="container">
       <div class="row text-center mb-4">
@@ -348,6 +349,36 @@
     </div>
     </div>
   </section>
+  
+  <div class="borda"></div>
+  <section class="container-fluid w-100 bg-light py-5">
+    <div class="container">
+      <div class="row text-center mb-4">
+        <div class="col-md-12">
+          <h2 class="titulo-figo">O Figo foi desenvolvido para você!</h2>
+          <p class="descricao-figo">Se você enfrenta qualquer um desses sintomas, é hora de agir!</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <ul class="symptoms-list">
+            <li> Abdômen dolorido ou desconforto abdominal constante;</li>
+            <li> Sensação de inchaço que persiste ao longo do dia;</li>
+            <li> Dores de cabeça frequentes e inexplicáveis;</li>
+            <li> Perda de apetite que prejudica sua alimentação;</li>
+            <li> Fraqueza e cansaço que afetam sua energia e qualidade de vida.</li>
+          </ul>
+        </div>
+        <div class="col-md-6 d-flex align-items-center justify-content-center">
+          <div class="cta-box p-4 text-white text-center rounded">
+            <p class="descricao-figo mb-3"><strong>Compre com total segurança e tenha a garantia de satisfação!</strong></p>
+            <button class="btn-padrao">Garanta Agora o Seu Figo!</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
 
 
 
