--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               <button class="play-button">▶</button>
             </div>
             <div class="video-wrapper" style="display: none;">
-              <iframe data-src="src/videos/03.MP4.MP4" frameborder="0" allow="autoplay; encrypted-media;"
+              <iframe data-src="src/videos/03.MP4" frameborder="0" allow="autoplay; encrypted-media;"
                 allowfullscreen controls loading="lazy"></iframe>
             </div>
           </div>
@@ -378,6 +378,74 @@
       </div>
     </div>
   </section>
+
+  <section class="container-fluid w-100 py-5">
+    <div class="container">
+      <div class="row text-center mb-4">
+        <div class="col-md-12">
+          <h2 class="titulo-figo">Escolha o Melhor Pacote para Você!</h2>
+          <p class="descricao-figo">Aproveite nossas ofertas exclusivas e transforme sua saúde agora mesmo!</p>
+        </div>
+      </div>
+      <div class="row">
+        <!-- Pacote 5 Frascos -->
+        <div class="col-md-4 mb-4">
+          <div class="card pricing-card h-100 shadow">
+            <div class="card-header bg-success text-white text-center">
+              <h3 >Pacote Premium</h3>
+              <p>Compre 3, Leve 2 Grátis</p>
+            </div>
+            <div class="card-body text-center">
+              <p class="descricao-figo">Tratamento para <strong>5 meses</strong></p>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"><img src="src/img/figo5.webp" width="100%"></a>
+              <p class="price-old">De <s>R$ 682,10</s></p>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n">
+                <p class="price-new"><strong>12x de R$ 40,89</strong> <br> ou <strong>R$ 397,00 à vista</strong></p>
+              </a>
+              <a href="https://ev.braip.com/ref?pl=plapyxxn&ck=che7q4xw&af=afi11q021n" class="btn btn-success btn-lg mt-3" target="_blank">Comprar Agora</a>
+            </div>
+          </div>
+        </div>
+        <!-- Pacote 3 Frascos -->
+        <div class="col-md-4 mb-4">
+          <div class="card pricing-card h-100 shadow">
+            <div class="card-header bg-primary text-white text-center">
+              <h3>Pacote Essencial</h3>
+              <p>Compre 2, Leve 1 Grátis</p>
+            </div>
+            <div class="card-body text-center">
+              <p class="descricao-figo">Tratamento para <strong>3 meses</strong></p>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"><img src="src/img/figo3.webp" width="100%"></a>
+              <p class="price-old">De <s>R$ 467,70</s></p>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n">
+                <p class="price-new"><strong>12x de R$ 30,55</strong> <br> ou <strong>R$ 297,00 à vista</strong></p>
+              </a>
+              <a href="https://ev.braip.com/ref?pl=pla6xee6&ck=che7q4xw&af=afi11q021n" class="btn btn-primary btn-lg mt-3" target="_blank">Comprar Agora</a>
+            </div>
+          </div>
+        </div>
+        <!-- Pacote 1 Frasco -->
+        <div class="col-md-4 mb-4">
+          <div class="card pricing-card h-100 shadow">
+            <div class="card-header bg-green text-white text-center">
+              <h3>Pacote Individual</h3>
+              <p>1 Frasco</p>
+            </div>
+            <div class="card-body text-center">
+              <p class="descricao-figo">Tratamento para <strong>1 mês</strong></p>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"><img src="src/img/figo11.png" width="100%" class="figo-frasco"></a>
+              <p class="price-old">De <s>R$ 367,70</s></p>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n">
+                <p class="price-new"><strong>12x de R$ 20,27</strong> <br> ou <strong>R$ 197,00 à vista</strong></p>
+              </a>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n" class="btn btn-secondary btn-lg mt-3" target="_blank">Comprar Agora</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
   
 
 
