adicionado FAQ e rodape

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   </section>
 
   <div class="borda"></div>
-  <section class="container-fluid">
+  <section class="container-fluid" id="sobre">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6">
@@ -328,8 +328,8 @@
               <button class="play-button">▶</button>
             </div>
             <div class="video-wrapper" style="display: none;">
-              <iframe data-src="src/videos/03.MP4" frameborder="0" allow="autoplay; encrypted-media;"
-                allowfullscreen controls loading="lazy"></iframe>
+              <iframe data-src="src/videos/03.MP4" frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen
+                controls loading="lazy"></iframe>
             </div>
           </div>
         </div>
@@ -349,7 +349,7 @@
     </div>
     </div>
   </section>
-  
+
   <div class="borda"></div>
   <section class="container-fluid w-100 bg-light py-5">
     <div class="container">
@@ -371,7 +371,8 @@
         </div>
         <div class="col-md-6 d-flex align-items-center justify-content-center">
           <div class="cta-box p-4 text-white text-center rounded">
-            <p class="descricao-figo mb-3"><strong>Compre com total segurança e tenha a garantia de satisfação!</strong></p>
+            <p class="descricao-figo mb-3"><strong>Compre com total segurança e tenha a garantia de satisfação!</strong>
+            </p>
             <button class="btn-padrao">Garanta Agora o Seu Figo!</button>
           </div>
         </div>
@@ -392,17 +393,19 @@
         <div class="col-md-4 mb-4">
           <div class="card pricing-card h-100 shadow">
             <div class="card-header bg-success text-white text-center">
-              <h3 >Pacote Premium</h3>
+              <h3>Pacote Premium</h3>
               <p>Compre 3, Leve 2 Grátis</p>
             </div>
             <div class="card-body text-center">
               <p class="descricao-figo">Tratamento para <strong>5 meses</strong></p>
-              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"><img src="src/img/figo5.webp" width="100%"></a>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"><img src="src/img/figo5.webp"
+                  width="100%"></a>
               <p class="price-old">De <s>R$ 682,10</s></p>
               <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n">
                 <p class="price-new"><strong>12x de R$ 40,89</strong> <br> ou <strong>R$ 397,00 à vista</strong></p>
               </a>
-              <a href="https://ev.braip.com/ref?pl=plapyxxn&ck=che7q4xw&af=afi11q021n" class="btn btn-success btn-lg mt-3" target="_blank">Comprar Agora</a>
+              <a href="https://ev.braip.com/ref?pl=plapyxxn&ck=che7q4xw&af=afi11q021n"
+                class="btn btn-success btn-lg mt-3" target="_blank">Comprar Agora</a>
             </div>
           </div>
         </div>
@@ -415,12 +418,14 @@
             </div>
             <div class="card-body text-center">
               <p class="descricao-figo">Tratamento para <strong>3 meses</strong></p>
-              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"><img src="src/img/figo3.webp" width="100%"></a>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"><img src="src/img/figo3.webp"
+                  width="100%"></a>
               <p class="price-old">De <s>R$ 467,70</s></p>
               <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n">
                 <p class="price-new"><strong>12x de R$ 30,55</strong> <br> ou <strong>R$ 297,00 à vista</strong></p>
               </a>
-              <a href="https://ev.braip.com/ref?pl=pla6xee6&ck=che7q4xw&af=afi11q021n" class="btn btn-primary btn-lg mt-3" target="_blank">Comprar Agora</a>
+              <a href="https://ev.braip.com/ref?pl=pla6xee6&ck=che7q4xw&af=afi11q021n"
+                class="btn btn-primary btn-lg mt-3" target="_blank">Comprar Agora</a>
             </div>
           </div>
         </div>
@@ -433,24 +438,148 @@
             </div>
             <div class="card-body text-center">
               <p class="descricao-figo">Tratamento para <strong>1 mês</strong></p>
-              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"><img src="src/img/figo11.png" width="100%" class="figo-frasco"></a>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"><img src="src/img/figo11.png"
+                  width="100%" class="figo-frasco"></a>
               <p class="price-old">De <s>R$ 367,70</s></p>
               <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n">
                 <p class="price-new"><strong>12x de R$ 20,27</strong> <br> ou <strong>R$ 197,00 à vista</strong></p>
               </a>
-              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n" class="btn btn-secondary btn-lg mt-3" target="_blank">Comprar Agora</a>
+              <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"
+                class="btn btn-secondary btn-lg mt-3" target="_blank">Comprar Agora</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  
-  
 
+  <section class="container-fluid w-100 py-5" id="garantia">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <h2 class="text-success fw-bold mb-4">Satisfação Garantida ou seu Dinheiro de Volta!</h2>
+          <p class="fs-5 text-success">
+            Nós acreditamos tanto na eficácia do <strong>Figo</strong> que oferecemos uma garantia incondicional:
+            experimente o produto por <strong>90 dias</strong> e, se não obtiver os resultados esperados, devolvemos
+            <strong>100% do seu investimento</strong>.
+            Sem complicações, sem perguntas.
+          </p>
+          <p class="fs-5 fw-bold text-success">Ou você vê resultados em 90 dias, ou devolvemos o seu dinheiro!</p>
+        </div>
+        <div class="col-md-6 text-center">
+          <img src="src/img/garantia.jpg" alt="Selo de Garantia" width="100%" class="garantia">
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="container-fluid w-100 bg-light py-5" id="perguntas-frequentes">
+    <div class="container">
+      <h2 class="text-center text-success fw-bold mb-5">Perguntas Frequentes</h2>
+      <div class="faq">
 
+        <details class="mb-3">
+          <summary class="fw-bold">Tem contra-indicação e efeito colateral?</summary>
+          <p>
+            Não há contra-indicações ou efeitos colaterais, qualquer pessoa pode aproveitar os benefícios do FIGO.
+            Entretanto, é necessário observar se existe alguma alergia aos ingredientes do composto.
+          </p>
+        </details>
 
+        <details class="mb-3">
+          <summary class="fw-bold">O produto é vegano ou cruelty-free?</summary>
+          <p>
+            Sim, todos os nossos produtos são veganos e cruelty-free!
+          </p>
+        </details>
+
+        <details class="mb-3">
+          <summary class="fw-bold">O produto contém parabenos?</summary>
+          <p>
+            Não, FIGO é livre de parabenos, sulfatos e ftalatos. Sua saúde está protegida ao usar nossos produtos!
+          </p>
+        </details>
+
+        <details class="mb-3">
+          <summary class="fw-bold">O FIGO pode funcionar para o meu caso?</summary>
+          <p>
+            Sim! O FIGO é feito com compostos seguros que têm efeitos no curto e no longo prazo, funcionando em qualquer
+            organismo.
+          </p>
+        </details>
+
+        <details class="mb-3">
+          <summary class="fw-bold">Em quanto tempo posso ver os resultados?</summary>
+          <p>
+            Logo nos primeiros dias já vai sentir os efeitos do FIGO. O uso contínuo fará com que se sinta cada vez mais
+            renovado e saudável.
+          </p>
+        </details>
+
+        <details class="mb-3">
+          <summary class="fw-bold">Tem garantia de resultados?</summary>
+          <p>
+            Adquira o produto hoje e seja protegido automaticamente pela Garantia Incondicional FIGO, onde você tem 90
+            dias para testar nosso produto livre de risco. Se por algum motivo, dentro do prazo de 90 dias, você achar
+            que seu investimento não valeu a pena, é só pedir seu dinheiro de volta!
+          </p>
+        </details>
+
+        <details class="mb-3">
+          <summary class="fw-bold">O FIGO é aprovado pela ANVISA?</summary>
+          <p>
+            Sim! Ele é aprovado pela ANVISA. O FIGO passou pelos mais rigorosos testes de eficácia e foi aprovado pela
+            Anvisa. Os ingredientes utilizados são autorizados para uso em suplementos alimentares, conforme Instrução
+            Normativa – IN N° 20/2018.
+          </p>
+        </details>
+
+        <details class="mb-3">
+          <summary class="fw-bold">O FIGO vai estar sempre disponível a esse preço? Posso comprar amanhã?</summary>
+          <p>
+            Não podemos garantir que esta oferta especial estará disponível em seu próximo acesso à página. O carrinho
+            está aberto há 3 dias e em menos de 24 horas irá fechar. Recomendamos que você aproveite a oportunidade
+            hoje, mesmo que deseje utilizá-lo posteriormente.
+          </p>
+        </details>
+
+      </div>
+    </div>
+  </section>
+
+  <footer class="container-fluid bg-green text-light py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-3">
+          <h2 class="text-uppercase">FIGO</h2>
+          <p>
+            Transformando vidas com produtos naturais de alta qualidade. Nosso compromisso é com a sua saúde e
+            bem-estar.
+          </p>
+        </div>
+        <div class="col-md-4 mb-3">
+          <h5 class="text-uppercase">Links Úteis</h5>
+          <ul class="list-unstyled">
+            <li><a href="#sobre" class="text-light text-decoration-none">Sobre</a></li>
+            <li><a href="#perguntas-frequentes" class="text-light text-decoration-none">Perguntas Frequentes</a></li>
+            <li><a href="#garantia" class="text-light text-decoration-none">Garantia</a></li>
+          </ul>
+        </div>  
+        <div class="col-md-4">
+          <h3>Formas de pagamentos</h3>
+          <img src="src/img/pagamentos.png" class="formas-pagamentos" width="100%">
+        </div>    
+      </div>
+
+      <hr class="bg-secondary">
+
+      <div class="row text-center">
+        <div class="col-md-12">
+          <p class="mb-0">&copy; 2024 FIGO. Todos os direitos reservados.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <!-- jQuery -->
   <script src="src/js/jquery.min.js"></script>
