adicionado call to actions

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           <p><strong>Figo</strong> é um dos primeiros produtos especialmente desenvolvidos para desintoxicar e restaurar
             a vitalidade do fígado. A oportunidade ideal para começar a cuidar da sua saúde!</p>
-          <button class="btn-padrao">Eu quero ter um fígado saudável</button>
+          <button class="btn-padrao"><a href="#venda">Eu quero ter um fígado saudável</a></button>
 
         </div>
         <div class="col-md-6">
@@ -143,7 +143,7 @@
             <li>Problemas cognitivos e baixa função hepática.</li>
           </ul>
           <h4><strong>Não espere mais para cuidar do seu fígado e restaurar sua saúde.</strong></h4>
-          <button class="btn-padrao">Eu quero o Figo</button>
+          <button class="btn-padrao"><a href="#venda">Eu quero o Figo</a></button>
         </div>
 
       </div>
@@ -173,7 +173,7 @@
             Com <strong>Figo</strong>, você dá ao seu corpo o suporte que ele merece para viver mais leve, saudável e
             equilibrado.
           </p>
-          <button class="btn-padrao">Eu quero experimentar</button>
+          <button class="btn-padrao"><a href="#venda">Eu quero experimentar</a></button>
         </div>
         <div class="col-md-6 text-center">
           <img src="src/img/figo-produto2.webp" class="produto" alt="Produto Figo">
@@ -278,7 +278,7 @@
           </div>
         </div>
         <div class="col-md-12 text-center">
-          <button class="btn-padrao">Eu quero meu Fígado saúdavel</button>
+          <button class="btn-padrao"><a href="#venda">Eu quero meu Fígado saúdavel</a></button>
         </div>
       </div>
     </div>
@@ -373,14 +373,14 @@
           <div class="cta-box p-4 text-white text-center rounded">
             <p class="descricao-figo mb-3"><strong>Compre com total segurança e tenha a garantia de satisfação!</strong>
             </p>
-            <button class="btn-padrao">Garanta Agora o Seu Figo!</button>
+            <button class="btn-padrao"><a href="#venda">Garanta Agora o Seu Figo!</a></button>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="container-fluid w-100 py-5">
+  <section class="container-fluid w-100 py-10">
     <div class="container">
       <div class="row text-center mb-4">
         <div class="col-md-12">
@@ -388,7 +388,7 @@
           <p class="descricao-figo">Aproveite nossas ofertas exclusivas e transforme sua saúde agora mesmo!</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="venda">
         <!-- Pacote 5 Frascos -->
         <div class="col-md-4 mb-4">
           <div class="card pricing-card h-100 shadow">
@@ -405,7 +405,7 @@
                 <p class="price-new"><strong>12x de R$ 40,89</strong> <br> ou <strong>R$ 397,00 à vista</strong></p>
               </a>
               <a href="https://ev.braip.com/ref?pl=plapyxxn&ck=che7q4xw&af=afi11q021n"
-                class="btn btn-success btn-lg mt-3" target="_blank">Comprar Agora</a>
+                class="btn-padrao btn btn-success btn-lg mt-3" target="_blank">Comprar Agora</a>
             </div>
           </div>
         </div>
@@ -425,7 +425,7 @@
                 <p class="price-new"><strong>12x de R$ 30,55</strong> <br> ou <strong>R$ 297,00 à vista</strong></p>
               </a>
               <a href="https://ev.braip.com/ref?pl=pla6xee6&ck=che7q4xw&af=afi11q021n"
-                class="btn btn-primary btn-lg mt-3" target="_blank">Comprar Agora</a>
+                class="btn-padrao btn btn-primary btn-lg mt-3" target="_blank">Comprar Agora</a>
             </div>
           </div>
         </div>
@@ -445,7 +445,7 @@
                 <p class="price-new"><strong>12x de R$ 20,27</strong> <br> ou <strong>R$ 197,00 à vista</strong></p>
               </a>
               <a href="https://ev.braip.com/ref?pl=pladl66q&ck=che7q4xw&af=afi11q021n"
-                class="btn btn-secondary btn-lg mt-3" target="_blank">Comprar Agora</a>
+                class="btn-padrao btn btn-secondary btn-lg mt-3" target="_blank">Comprar Agora</a>
             </div>
           </div>
         </div>
