--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </div>
   </header>
-  <main class="container-fluid w-100 mb-50">
+  <main class="container-fluid w-100 py-5 mb-50">
     <div class="container">
       <div class="row">
         <div class="col-md-12 mb-50">
@@ -76,11 +76,13 @@
 
           <p><strong>Figo</strong> é um dos primeiros produtos especialmente desenvolvidos para desintoxicar e restaurar
             a vitalidade do fígado. A oportunidade ideal para começar a cuidar da sua saúde!</p>
-          <button class="btn-padrao"><a href="#venda">Eu quero ter um fígado saudável</a></button>
-
+          
         </div>
         <div class="col-md-6">
-          <img src="src/img/figo-produto.webp" class="produto" alt="Imagem do produto Figo">
+          <img src="src/img/figo-produto.webp" class="produto mb-50" alt="Imagem do produto Figo">
+        </div>
+        <div class="col-md-12 text-center">
+          <button class="btn-padrao"><a href="#venda">Eu quero ter um fígado saudável</a></button>
         </div>
       </div>
     </div>
@@ -136,12 +138,16 @@
             <li>A carência de nutrientes afeta a memória e energia.</li>
             <li>O fígado é essencial para combater e gordura abdominal.</li>
           </ul>
-          <p><strong>Problemas associados à falta de nutrientes:</strong></p>
-          <ul>
-            <li>Fadiga constante e falta de energia.</li>
-            <li>Gordura acumulada na barriga.</li>
-            <li>Problemas cognitivos e baixa função hepática.</li>
-          </ul>
+          <div class="d-none d-dm-block d-lg-block">
+            <p><strong>Problemas associados à falta de nutrientes:</strong></p>
+            <ul>
+              <li>Fadiga constante e falta de energia.</li>
+              <li>Gordura acumulada na barriga.</li>
+              <li>Problemas cognitivos e baixa função hepática.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-12 text-center">
           <h4><strong>Não espere mais para cuidar do seu fígado e restaurar sua saúde.</strong></h4>
           <button class="btn-padrao"><a href="#venda">Eu quero o Figo</a></button>
         </div>
@@ -151,7 +157,7 @@
   </section>
 
   <div class="borda"></div>
-  <section class="container-fluid" id="sobre">
+  <section class="container-fluid w-100 py-5" id="sobre">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6">
@@ -173,16 +179,18 @@
             Com <strong>Figo</strong>, você dá ao seu corpo o suporte que ele merece para viver mais leve, saudável e
             equilibrado.
           </p>
-          <button class="btn-padrao"><a href="#venda">Eu quero experimentar</a></button>
         </div>
         <div class="col-md-6 text-center">
-          <img src="src/img/figo-produto2.webp" class="produto" alt="Produto Figo">
+          <img src="src/img/figo-produto2.webp" class="produto2" alt="Produto Figo">
+        </div>
+        <div class="col-md-12 text-center py-5">
+          <button class="btn-padrao"><a href="#venda">Eu quero experimentar</a></button>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="container-fluid padding-block-30">
+  <section class="container-fluid py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -190,7 +198,7 @@
           <p class="descricao-figo mb-30">Transforme sua saúde com ingredientes poderosos selecionados para restaurar a
             função hepática, recuperar a energia da juventude e eliminar anos de gordura acumulada!</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-6 col-md-4">
           <div class="card-container">
             <div class="card-imagem">
               <img src="src/img/card-omega.webp" width="100%">
@@ -198,14 +206,14 @@
             <div class="card-titulo">
               <h4>Omega 3</h4>
             </div>
-            <div class="card-descricao">
+            <div class="card-descricao d-none d-lg-block">
               <p>Reconhecido por suas propriedades antioxidantes e anti-inflamatórias, o Ômega 3 é essencial para ajudar
                 a combater a esteatose hepática, protegendo o fígado contra danos celulares e promovendo uma saúde
                 duradoura</p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-6 col-md-4">
           <div class="card-container">
             <div class="card-imagem">
               <img src="src/img/card-fibra-maca.webp" width="100%">
@@ -213,13 +221,13 @@
             <div class="card-titulo">
               <h4>FIBRA DA CASCA DE MAÇÃ</h4>
             </div>
-            <div class="card-descricao">
+            <div class="card-descricao d-none d-lg-block">
               <p>Muito além de uma simples fibra! Ela auxilia na redução do colesterol ruim e triglicerídeos, além de
                 aumentar a saciedade, controlando o apetite e facilitando a perda de peso saudável</p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-6 col-md-4">
           <div class="card-container">
             <div class="card-imagem">
               <img src="src/img/card-alho.webp" width="100%">
@@ -227,21 +235,21 @@
             <div class="card-titulo">
               <h4>EXTRATO DE ALHO</h4>
             </div>
-            <div class="card-descricao">
+            <div class="card-descricao d-none d-lg-block">
               <p>O poderoso Extrato de Alho contém alicina, um antioxidante natural que reduz os níveis de colesterol e
                 triglicerídeos, ajudando a evitar o acúmulo de gordura no fígado</p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-6 col-md-4">
           <div class="card-container">
             <div class="card-imagem">
               <img src="src/img/card-rev.webp" width="100%">
-            </div>
+            </div>            
             <div class="card-titulo">
-              <h4>RESVERATROL</h4>
+              <h4>Resveratrol</h4>
             </div>
-            <div class="card-descricao">
+            <div class="card-descricao d-none d-lg-block">
               <p>Com ação antioxidante, anti-inflamatória e lipolítica, o Resveratrol é um aliado valioso para combater
                 problemas hepáticos e obesidade, contribuindo para uma saúde renovada.
 
@@ -249,7 +257,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-6 col-md-4">
           <div class="card-container">
             <div class="card-imagem">
               <img src="src/img/card-vitamina-k2.webp" width="100%">
@@ -257,13 +265,13 @@
             <div class="card-titulo">
               <h4>VITAMINA K2</h4>
             </div>
-            <div class="card-descricao">
+            <div class="card-descricao d-none d-lg-block">
               <p>Indispensável para a produção de proteínas essenciais pelo fígado, a Vitamina K2 ajuda a equilibrar os
                 níveis de cálcio no organismo e otimiza a coagulação sanguínea</p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-6 col-md-4">
           <div class="card-container">
             <div class="card-imagem">
               <img src="src/img/card-vitamina-b12.webp" width="100%">
@@ -271,7 +279,7 @@
             <div class="card-titulo">
               <h4>VITAMINA B12 E VITAMINA D</h4>
             </div>
-            <div class="card-descricao text-wrap">
+            <div class="card-descricao text-wrap d-none d-lg-block">
               <p>A Vitamina B12 desacelera o progresso da doença hepática gordurosa, enquanto a Vitamina D age como um
                 supernutriente, apoiando o cérebro, a pele e os nervos, além de fortalecer o sistema imunológico</p>
             </div>
@@ -550,15 +558,15 @@
   <footer class="container-fluid bg-green text-light py-4">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 mb-3">
-          <h2 class="text-uppercase">FIGO</h2>
+        <div class="col-md-4 mb-15">
+          <h2 class="text-uppercase fs-24">FIGO</h2>
           <p>
             Transformando vidas com produtos naturais de alta qualidade. Nosso compromisso é com a sua saúde e
             bem-estar.
           </p>
         </div>
-        <div class="col-md-4 mb-3">
-          <h5 class="text-uppercase">Links Úteis</h5>
+        <div class="col-md-4 mb-15">
+          <h5 class="text-uppercase fs-24">Links Úteis</h5>
           <ul class="list-unstyled">
             <li><a href="#sobre" class="text-light text-decoration-none">Sobre</a></li>
             <li><a href="#perguntas-frequentes" class="text-light text-decoration-none">Perguntas Frequentes</a></li>
